--- a/midterm/CMSE202-Midterm-Section003-STUDENT.ipynb
+++ b/midterm/CMSE202-Midterm-Section003-STUDENT.ipynb
@@ -41,7 +41,7 @@
     }
    },
    "source": [
-    "> I, **INSERT NAME HERE**, affirm that this exam represents my own authetic work, without the use of any unpermitted aids or generative AIs or person-to-person communication. I understand that this exam an an opportunity to showcase my own progress in developing and improving my computational skills and have done my best to demonstrate those skills."
+    "> I, **Carla Carreon-Elisea**, affirm that this exam represents my own authetic work, without the use of any unpermitted aids or generative AIs or person-to-person communication. I understand that this exam an an opportunity to showcase my own progress in developing and improving my computational skills and have done my best to demonstrate those skills."
    ]
   },
   {
@@ -81,7 +81,11 @@
    "source": [
     "&#9989; **Do this**:\n",
     "```\n",
-    "Put the commands you used here (Do Not Delete the ```)\n",
+    "mkdir midterm\n",
+    "mv (midterm file name) CMSE202-S25-TURNIN\n",
+    "git add.\n",
+    "git commit -m \"adding midterm folder\"\n",
+    "git push\n",
     "```\n"
    ]
   },
@@ -95,13 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "adf93908",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Put your code here:\n",
-    "\n"
+    "\n",
+    "#$git clone https://github.com/Car1ita/CMSE202-S25-TURNIN.git\n"
    ]
   },
   {
@@ -119,7 +124,8 @@
    "source": [
     "&#9989; **Do this**:\n",
     "```\n",
-    "Put the commands here (Do Not Delete the ```)\n",
+    "git checkout -b Version2\n",
+    "This creates a new veersion \n",
     "```\n"
    ]
   },
@@ -136,7 +142,7 @@
    "id": "8ebbe96b-c3a7-41b5-8be7-1e1eb842eee5",
    "metadata": {},
    "source": [
-    "&#9989; **Do this**: **Leave the source of Gen AI here if you used any in Part 1.**"
+    "&#9989; **Do this**: **https://www.howtogeek.com/how-to-create-folders-and-files-from-windows-command-prompt/#:~:text=To%20create%20a%20folder%20with,%2C%20followed%20by%20nul%20%3E%20filename.** "
    ]
   },
   {
