--- a/hw-02/HW02_Part1-Orbits-SS25-STUDENT.ipynb
+++ b/hw-02/HW02_Part1-Orbits-SS25-STUDENT.ipynb
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✎ Do This - Erase the contents of this cell and replace it with your answer to the above question! (double-click on this text to edit this cell, and hit shift+enter to save the text)"
+    "T² = (2π)²4a³/GM/T² = (2π)²a³/GM which would get us 8 meaning the planet 1 is 8 times greater than planet 2. The reason is because the radius is larger meaning that there is more time that is needed to complete the orbit."
    ]
   },
   {
@@ -344,10 +344,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "class Planet:\n",
     "    \"\"\"\n",
     "    A class representing a planet orbiting a star.\n",
@@ -365,26 +367,26 @@
     "        self.orbital_radius = orbital_radius\n",
     "        self.star_mass = star_mass\n",
     "        \n",
-    "    def get_orbital_period(): #add the missing parameters here\n",
+    "    def get_orbital_period(self): #add the missing parameters here\n",
     "        \"\"\"\n",
     "        Calculate and return the orbital period of the planet.\n",
     "        \"\"\"\n",
-    "        # here you need to use the equation you found that relates orbital period and radius.\n",
-    "        pass"
+    "        return  2*math.pi * math.sqrt(self.orbital_radius**3/self.star_mass)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(99.345882657961)"
+       "99.345882657961"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
