--- a/hw-02/HW02_Part2-Risk-SS25-STUDENT.ipynb
+++ b/hw-02/HW02_Part2-Risk-SS25-STUDENT.ipynb
@@ -102,18 +102,51 @@
     "    # Complete the remaining continents\n",
     "    'South America': {\n",
     "        # Add territories and their connections\n",
+    "        'Brazil': ['Venezuela', 'Peru', 'Argentina', 'North Africa'],\n",
+    "        'Venezuela': ['Brazil', 'Peru'],\n",
+    "        'Peru': ['Brazil', 'Argentina', 'Venezuela'],\n",
+    "        'Argentina' : ['Peru', 'Brazil']\n",
     "    },\n",
     "    'Europe': {\n",
     "        # Add territories and their connections\n",
+    "        'Western Europe': ['Southern Europe', 'Northern Europe', 'Great Britain'],\n",
+    "        'Southern Europe': ['North Africa', 'Egypt', 'Western Europe', 'Northern Europe', 'Ukraine', 'Middle East'],\n",
+    "        'Northern Europe': ['Western Europe', 'Southern Europe', 'Ukraine', 'Scandinavia', 'Great Britain'],\n",
+    "        'Ukraine': ['Northern Europe', 'Southern Europe', 'Ural', 'Afghanistan', 'Middle East', 'Scandinavia'],\n",
+    "        'Scandinavia': ['Iceland', 'Great Britain', 'Northern Europe', 'Ukraine'],\n",
+    "        'Iceland': ['Greenland', 'Great Britain', 'Scandinavia'],\n",
+    "        'Great Britain': ['Western Europe', 'Northern Europe', 'Iceland', 'Scandinavia']\n",
     "    },\n",
     "    'Africa': {\n",
     "        # Add territories and their connections\n",
+    "        'North Africa': ['Brazil', 'Egypt', 'East Africa', 'Congo', 'Southern Europe'],\n",
+    "        'Egypt': ['North Africa', 'East Africa', 'Middle East', 'Southern Europe'],\n",
+    "        'East Africa': ['Madagascar', 'South Africa', 'Congo', 'North Africa', 'Egypt', 'Middle East'],\n",
+    "        'Congo': ['South Africa', 'East Africa', 'North Africa'],\n",
+    "        'South Africa': ['Congo', 'East Africa', 'Madagascar'],\n",
+    "        'Madagascar': ['South Africa', 'East Africa']\n",
     "    },\n",
     "    'Asia': {\n",
     "        # Add territories and their connections\n",
+    "        'Middle East': ['Egypt', 'Southern Europe', 'East Africa', 'India', 'Afghanistan', 'Ukraine'],\n",
+    "        'India': ['Middle East' , 'Siam', 'China', 'Afghanistan'],\n",
+    "        'Siam': ['India', 'China', 'Indonesia'],\n",
+    "        'China': ['India', 'Siam', 'Afghanistan', 'Ural', 'Siberia', 'Mongolia'],\n",
+    "        'Afghanistan': ['Ural', 'China', 'India', 'Middle East', 'Ukraine'],\n",
+    "        'Ural': ['Afghanistan', 'Siberia', 'China', 'Ukraine'],\n",
+    "        'Siberia': ['Ural', 'Yakutsk', 'Irkutsk', 'China', 'Mongolia'],\n",
+    "        'Yakutsk': ['Siberia', 'Irkutsk', 'Kamchatka'],\n",
+    "        'Irkutsk': ['Mongolia', 'Kamchatka', 'Siberia','Yakutsk'],\n",
+    "        'Mongolia': ['Japan', 'Kamchatka', 'Irkutsk', 'China', 'Siberia'],\n",
+    "        'Japan': ['Mongolia', 'Kamchatka'],\n",
+    "        'Kamchatka': ['Yakutsk', 'Irkutsk', 'Mongolia', 'Japan', 'Alaska'],\n",
     "    },\n",
     "    'Australia': {\n",
     "        # Add territories and their connections\n",
+    "        'Western Australia': ['Eastern Australia', 'Indonesia', 'New Guinea'],\n",
+    "        'Eastern Australia': ['Western Australia', 'New Guinea'],\n",
+    "        'Indonesia': ['Siam', 'Western Australia', 'New Guinea'],\n",
+    "        'New Guinea': ['Indonesia', 'Eastern Australia', 'Western Australia']\n",
     "    }\n",
     "}\n"
    ]
