Commiting Part 3 COMPLETE LAST COMMITMENT

--- a/hw-02/HW02_Part2-Risk-SS25-STUDENT_DONE.ipynb
+++ b/hw-02/HW02_Part2-Risk-SS25-STUDENT_DONE.ipynb
@@ -312,21 +312,63 @@
    "source": [
     "1. The best layout would be from the second graph, it separates based on the continent the colors make it very easy to read and navigate connections between each country and which country they are most connected to.\n",
     "   \n",
-    "2. Kamada-Kawai is a two-level dictionary of distances between nodes. \n",
+    "2. Kamada-Kawai is a two-level dictionary of distances between nodes. It is indexed by the source and by the destination node. If there is nothing the distance is computed using the shortest_path_length()\n",
     "\n",
-    "3. Continent_colors has colors assigned to each continent in a dictionary and then in the plotting changing the variables and changing from dictionary to list making all those items that fit into that continent.\n",
+    "https://networkx.org/documentation/stable/reference/generated/networkx.drawing.layout.kamada_kawai_layout.html \n",
+    "\n",
+    "7. In this line of code the information is printed plt.legend(patches,labels,title=\"Continents\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question 3 \n",
+    "# Continent_colors has colors assigned to each continent in a dictionary and then in the plotting \n",
+    "# changing the variables and changing from dictionary to list making all those items that fit into that continent.\n",
+    "\n",
+    "continent_colors = {\n",
+    "    'North America': 'lightblue',\n",
+    "    'South America': 'lightgreen',\n",
+    "    'Europe': 'lightcoral',\n",
+    "    'Africa': 'lightyellow',\n",
+    "    'Asia': 'lightpink',\n",
+    "    'Australia': 'lightgray'\n",
+    "}\n",
     "\n",
     "\n",
-    "4. For my legend, I created labels and patches that would consider the labels for each continent and then created the colours in patches that connect each continent with what is close by.\n",
-    " \n",
-    "5.  I created a dictionary that took into account each continent and assigned them a colour based on the continent.\n",
+    "#Question 4\n",
+    "#When Plotting my graph I created two variables 1 to keep the labels in a list while the other creates\n",
+    "#a patch that is around the items in the legend and then legend itself takes those two variables and then plots them w/ a title!\n",
     "\n",
-    "6.  In this line of code the size is set(nx.draw(G,pos,with_labels=True,node_size=1000, node_color=node_colours, font_size=10,font_weight=\"bold\"))\n",
+    "# labels=list(continent_colors.keys())\n",
+    "# patches=[plt.Line2D([0],[0],marker='o',color='grey',markerfacecolor=x)\n",
+    "#          for x in continent_colors.values()]\n",
+    "# plt.legend(patches,labels,title=\"Continents\")\n",
+    "\n",
+    "# plt.show()\n",
+    "    \n",
+    "\n",
+    "#Question 5\n",
+    "#With the given code in this section it is reading node_color where it sets colors to each node and connects them to their continents.\n",
+    "\n",
+    "# node_colours=[continent_colors[G.nodes[node][\"continent\"]] for node in G.nodes]\n",
+    "# nx.draw(G,pos,with_labels=True,node_size=1000, node_color=node_colours, font_size=10,font_weight=\"bold\")\n",
     "\n",
     "\n",
-    "7. In this line of code the information is printed plt.legend(patches,labels,title=\"Continents\")\n",
-    "   \n",
-    "\n"
+    "#Question 6\n",
+    "#In this line of code the size is set for both nodes and fonts. The reason is that typically when plotting you want to add all\n",
+    "#of the information you need including x & y in the first part of the plot \n",
+    "\n",
+    "# (nx.draw(G,pos,with_labels=True,node_size=1000, node_color=node_colours, font_size=10,font_weight=\"bold\"))\n",
+    "\n",
+    "#Question 7 \n",
+    "#As mentioned in the question before this line of code allows to plot all of the data to print in this case with_labels=True \n",
+    "#prints the names of all of the country names on each circle\n",
+    "\n",
+    "# (nx.draw(G,pos,with_labels=True,node_size=1000, node_color=node_colours, font_size=10,font_weight=\"bold\"))"
    ]
   },
   {
