--- a/hw-03/HW-03_Regression-S25-STUDENT.ipynb
+++ b/hw-03/HW-03_Regression-S25-STUDENT.ipynb
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1636,9 +1636,9 @@
     "# Put your code \n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.2, random_state=0)\n",
-    "print(\"Training features shape:\", X_train.shape)\n",
-    "print(\"Testing features shape:\", X_test.shape)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, labels, test_size=0.2, random_state=0)\n",
+    "print(\"Training features shape:\", x_train.shape)\n",
+    "print(\"Testing features shape:\", x_test.shape)\n",
     "print(\"Training labels shape:\", y_train.shape)\n",
     "print(\"Testing labels shape:\", y_test.shape)"
    ]
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1690,7 @@
        "  <th>Date:</th>            <td>Mon, 31 Mar 2025</td> <th>  Pseudo R-squ.:     </th>  <td>0.7689</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>22:03:15</td>     <th>  Log-Likelihood:    </th> <td> -10.884</td> \n",
+       "  <th>Time:</th>                <td>22:06:53</td>     <th>  Log-Likelihood:    </th> <td> -10.884</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>False</td>      <th>  LL-Null:           </th> <td> -47.105</td> \n",
@@ -1749,7 +1749,7 @@
        "\\textbf{Model:}           &      Logit       & \\textbf{  Df Residuals:      } &       56    \\\\\n",
        "\\textbf{Method:}          &       MLE        & \\textbf{  Df Model:          } &       11    \\\\\n",
        "\\textbf{Date:}            & Mon, 31 Mar 2025 & \\textbf{  Pseudo R-squ.:     } &   0.7689    \\\\\n",
-       "\\textbf{Time:}            &     22:03:15     & \\textbf{  Log-Likelihood:    } &   -10.884   \\\\\n",
+       "\\textbf{Time:}            &     22:06:53     & \\textbf{  Log-Likelihood:    } &   -10.884   \\\\\n",
        "\\textbf{converged:}       &      False       & \\textbf{  LL-Null:           } &   -47.105   \\\\\n",
        "\\textbf{Covariance Type:} &    nonrobust     & \\textbf{  LLR p-value:       } & 4.186e-11   \\\\\n",
        "\\bottomrule\n",
@@ -1787,7 +1787,7 @@
        "Model:                          Logit   Df Residuals:                       56\n",
        "Method:                           MLE   Df Model:                           11\n",
        "Date:                Mon, 31 Mar 2025   Pseudo R-squ.:                  0.7689\n",
-       "Time:                        22:03:15   Log-Likelihood:                -10.884\n",
+       "Time:                        22:06:53   Log-Likelihood:                -10.884\n",
        "converged:                      False   LL-Null:                       -47.105\n",
        "Covariance Type:            nonrobust   LLR p-value:                 4.186e-11\n",
        "====================================================================================\n",
@@ -1813,16 +1813,16 @@
        "\"\"\""
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Put your code here\n",
-    "X_train_const = sm.add_constant(X_train)\n",
+    "x_train_const = sm.add_constant(x_train)\n",
     "\n",
-    "logit_model = sm.Logit(y_train, X_train_const)\n",
+    "logit_model = sm.Logit(y_train, x_train_const)\n",
     "result = logit_model.fit()\n",
     "\n",
     "result.summary()"
@@ -1837,11 +1837,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9411764705882353"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Put your code here"
+    "# Put your code here\n",
+    "x_test_const = sm.add_constant(x_test)\n",
+    "y_prob = result.predict(x_test_const)\n",
+    "y_pred = (y_prob >= 0.5).astype(int)\n",
+    "accuracy = (y_pred == y_test).mean()\n",
+    "\n",
+    "accuracy"
    ]
   },
   {
@@ -1870,7 +1887,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put your timeline here"
+    "Put your timeline here\n",
+    "(03/31-01/04) Have data picked out/ roles assigned, start developing code\n",
+    "(01/06-01/11) Continue with code start presentation & abstract\n",
+    "(01/13-01/18) Finalize Code Complete presentation & Abstract \n",
+    "(01/21-01/25) Presentation"
    ]
   },
   {
