--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "6d5c10ea-c48d-455f-bd47-fa0324676839",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "4af4a995-58a7-4478-9e3e-b805ab21779f",
    "metadata": {},
    "outputs": [
@@ -206,65 +206,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9,)\n",
-      "Accuracy:  0.915\n",
-      "Weights:  [          nan 5.1805600e+04 2.0980000e+02 1.2770000e+02 1.0000000e+00\n",
-      " 2.7191125e+04 5.8957100e+03 1.6498150e+05]\n",
-      "Bias weight: 850.999999999516\n"
+      "      gender   age  hypertension  heart_disease  smoking_history    bmi  \\\n",
+      "0          0  80.0             0              1                0  25.19   \n",
+      "1          0  54.0             0              0                1  27.32   \n",
+      "2          1  28.0             0              0                0  27.32   \n",
+      "3          0  36.0             0              0                2  23.45   \n",
+      "4          1  76.0             1              1                2  20.14   \n",
+      "...      ...   ...           ...            ...              ...    ...   \n",
+      "99995      0  80.0             0              0                1  27.32   \n",
+      "99996      0   2.0             0              0                1  17.37   \n",
+      "99997      1  66.0             0              0                3  27.83   \n",
+      "99998      0  24.0             0              0                0  35.42   \n",
+      "99999      0  57.0             0              0                2  22.43   \n",
+      "\n",
+      "       HbA1c_level  blood_glucose_level  diabetes  \n",
+      "0              6.6                  140         0  \n",
+      "1              6.6                   80         0  \n",
+      "2              5.7                  158         0  \n",
+      "3              5.0                  155         0  \n",
+      "4              4.8                  155         0  \n",
+      "...            ...                  ...       ...  \n",
+      "99995          6.2                   90         0  \n",
+      "99996          6.5                  100         0  \n",
+      "99997          5.7                  155         0  \n",
+      "99998          4.0                  100         0  \n",
+      "99999          6.6                   90         0  \n",
+      "\n",
+      "[100000 rows x 9 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1761009/932419682.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n"
      ]
     }
    ],
    "source": [
     "# put your code here\n",
     "#print(df.head())\n",
-    "df['gender']=df['gender'].map({'Female':0,'Male':1})\n",
-    "df['smoking_history'] = df['smoking_history'].map({'never': 0,'former':2,'No Info':3,'current':4,'ever not':5,'current':6 })\n",
-    "df['smoking_history'] = df['smoking_history'].fillna(0)\n",
-    "#print(df)\n",
+    "df['gender']=df['gender'].replace({'Female':0,'Male':1})\n",
+    "df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n",
+    "#df['smoking_history'] = df['smoking_history'].fillna(0)\n",
+    "print(df)\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "class MyPerceptron():\n",
-    "    def __init__ (self, labeled_data, iters, learning_rate):       \n",
-    "        self.data = np.array(labeled_data)\n",
-    "        self.weights = np.full((self.data.shape[1]), 1.0) # note that this is just an easy way to get \"number of features + 1\" and set them to 1.0\n",
-    "        self.iters = iters\n",
-    "        self.l_r = learning_rate\n",
-    "        print(self.weights.shape)\n",
-    "\n",
-    "       \n",
-    "    def predict(self, feature_set):\n",
-    "        # print(\"Features: \",feature_set, \" weights: \", self.weights[1:])\n",
-    "        res = np.dot(feature_set, self.weights[1:])\n",
-    "        res += self.weights[0]\n",
-    "        return (1 if res > 0 else -1)\n",
-    "\n",
-    "    def fit(self):\n",
-    "        for _ in range(self.iters):\n",
-    "            for row in self.data:\n",
-    "                update = self.l_r * (row[-1] - self.predict(row[:-1]))\n",
-    "                self.weights[1:] += update * row[:-1]\n",
-    "                self.weights[0] += update\n",
-    " \n",
-    "\n",
-    "    def errors(self):\n",
-    "        error_count = 0\n",
-    "        for row in self.data:\n",
-    "            # print(\"data: \", row[:-1], \"actual: \", row[-1], \"predict: \", self.predict(row[:-1]), \"weights: \", self.weights)\n",
-    "            if (self.predict(row[:-1]) != row[-1]):\n",
-    "                error_count += 1\n",
-    "        print(\"Accuracy: \", 1.0-(error_count/len(self.data)))\n",
-    "        print(\"Weights: \", self.weights[1:])\n",
-    "        print(\"Bias weight:\", self.weights[0])\n",
-    "        \n",
-    "df['diabetes']=df['diabetes'].map({0:-1,1:1})\n",
-    "\n",
-    "X=df.drop('diabetes',axis=1).values\n",
-    "y=df['diabetes'].values\n",
-    "data=np.column_stack((X,y))\n",
-    "perceptron=MyPerceptron(data,iters=5,learning_rate=0.01)\n",
-    "perceptron.fit()\n",
-    "perceptron.errors()"
+    "  "
    ]
   },
   {
@@ -294,12 +282,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "22f7672c-5fc3-4c4f-8d06-ec88508c81e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# copy your perceptron class to his cell\n"
+    "# copy your perceptron class to his cell\n",
+    "class MyPerceptron():\n",
+    "    def __init__ (self, labeled_data, iters, learning_rate):       \n",
+    "        self.data = np.array(labeled_data)\n",
+    "        self.weights = np.full((self.data.shape[1]), 1.0) # note that this is just an easy way to get \"number of features + 1\" and set them to 1.0\n",
+    "        self.iters = iters\n",
+    "        self.l_r = learning_rate\n",
+    "        print(self.weights.shape)\n",
+    "\n",
+    "       \n",
+    "    def predict(self, feature_set):\n",
+    "        # print(\"Features: \",feature_set, \" weights: \", self.weights[1:])\n",
+    "        res = np.dot(feature_set, self.weights[1:])\n",
+    "        res += self.weights[0]\n",
+    "        return (1 if res > 0 else -1)\n",
+    "\n",
+    "    def fit(self):\n",
+    "        for i in range(self.iters):\n",
+    "            for row in self.data:\n",
+    "                update = self.l_r * (row[-1] - self.predict(row[:-1]))\n",
+    "                self.weights[1:] += update * row[:-1]\n",
+    "                self.weights[0] += update\n",
+    " \n",
+    "\n",
+    "    def errors(self):\n",
+    "        error_count = 0\n",
+    "        for row in self.data:\n",
+    "            if (self.predict(row[:-1]) != row[-1]):\n",
+    "                error_count += 1\n",
+    "        print(\"Accuracy: \", 1.0-(error_count/len(self.data)))\n",
+    "        print(\"Weights: \", self.weights[1:])\n",
+    "        print(\"Bias weight:\", self.weights[0])"
    ]
   },
   {
@@ -314,12 +333,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7986537a-e054-4286-91a4-9ba639e3c53d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features shape: (70000, 8)\n",
+      "Testing labels shape: (30000,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X=df.drop('diabetes',axis=1).values\n",
+    "y=df['diabetes'].values\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "print(\"Training features shape:\", x_train.shape)\n",
+    "print(\"Testing labels shape:\", y_test.shape)"
    ]
   },
   {
@@ -332,12 +367,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3f6dd4c5-7bc1-4e9b-83e4-0417543b52d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing features shape: (30000, 8)\n",
+      "Testing labels shape: (30000,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "print(\"Testing features shape:\", x_test.shape)\n",
+    "print(\"Testing labels shape:\", y_test.shape)"
    ]
   },
   {
