--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "6d5c10ea-c48d-455f-bd47-fa0324676839",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "4af4a995-58a7-4478-9e3e-b805ab21779f",
    "metadata": {},
    "outputs": [
@@ -206,52 +206,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      gender   age  hypertension  heart_disease  smoking_history    bmi  \\\n",
-      "0          0  80.0             0              1                0  25.19   \n",
-      "1          0  54.0             0              0                1  27.32   \n",
-      "2          1  28.0             0              0                0  27.32   \n",
-      "3          0  36.0             0              0                2  23.45   \n",
-      "4          1  76.0             1              1                2  20.14   \n",
-      "...      ...   ...           ...            ...              ...    ...   \n",
-      "99995      0  80.0             0              0                1  27.32   \n",
-      "99996      0   2.0             0              0                1  17.37   \n",
-      "99997      1  66.0             0              0                3  27.83   \n",
-      "99998      0  24.0             0              0                0  35.42   \n",
-      "99999      0  57.0             0              0                2  22.43   \n",
+      "   gender   age  hypertension  heart_disease  smoking_history    bmi  \\\n",
+      "0       0  80.0             0              1                0  25.19   \n",
+      "1       0  54.0             0              0                1  27.32   \n",
+      "2       1  28.0             0              0                0  27.32   \n",
+      "3       0  36.0             0              0                2  23.45   \n",
+      "4       1  76.0             1              1                2  20.14   \n",
       "\n",
-      "       HbA1c_level  blood_glucose_level  diabetes  \n",
-      "0              6.6                  140         0  \n",
-      "1              6.6                   80         0  \n",
-      "2              5.7                  158         0  \n",
-      "3              5.0                  155         0  \n",
-      "4              4.8                  155         0  \n",
-      "...            ...                  ...       ...  \n",
-      "99995          6.2                   90         0  \n",
-      "99996          6.5                  100         0  \n",
-      "99997          5.7                  155         0  \n",
-      "99998          4.0                  100         0  \n",
-      "99999          6.6                   90         0  \n",
-      "\n",
-      "[100000 rows x 9 columns]\n"
+      "   HbA1c_level  blood_glucose_level  diabetes  \n",
+      "0          6.6                  140         0  \n",
+      "1          6.6                   80         0  \n",
+      "2          5.7                  158         0  \n",
+      "3          5.0                  155         0  \n",
+      "4          4.8                  155         0  \n",
+      "gender                   int64\n",
+      "age                    float64\n",
+      "hypertension             int64\n",
+      "heart_disease            int64\n",
+      "smoking_history          int64\n",
+      "bmi                    float64\n",
+      "HbA1c_level            float64\n",
+      "blood_glucose_level      int64\n",
+      "diabetes                 int64\n",
+      "dtype: object\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1761009/932419682.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n"
+      "/tmp/ipykernel_3345004/2075439444.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['gender']=df['gender'].replace({'Female':0,'Male':1, 'Other':2})\n"
      ]
     }
    ],
    "source": [
     "# put your code here\n",
     "#print(df.head())\n",
-    "df['gender']=df['gender'].replace({'Female':0,'Male':1})\n",
+    "df['gender']=df['gender'].replace({'Female':0,'Male':1, 'Other':2})\n",
     "df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n",
     "#df['smoking_history'] = df['smoking_history'].fillna(0)\n",
-    "print(df)\n",
     "\n",
+    "print(df.head())\n",
+    "print(df.dtypes)\n",
     "  "
    ]
   },
@@ -282,12 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "22f7672c-5fc3-4c4f-8d06-ec88508c81e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9,)\n",
+      "Accuracy:  0.91968\n",
+      "Weights:  [-17.1      3.6512  89.9     56.66    -7.24   -17.4256   2.454    1.84  ]\n",
+      "Bias weight: -201.32000000002918\n"
+     ]
+    }
+   ],
    "source": [
     "# copy your perceptron class to his cell\n",
+    "import numpy as np \n",
+    "\n",
     "class MyPerceptron():\n",
     "    def __init__ (self, labeled_data, iters, learning_rate):       \n",
     "        self.data = np.array(labeled_data)\n",
@@ -304,7 +314,7 @@
     "        return (1 if res > 0 else -1)\n",
     "\n",
     "    def fit(self):\n",
-    "        for i in range(self.iters):\n",
+    "        for _ in range(self.iters):\n",
     "            for row in self.data:\n",
     "                update = self.l_r * (row[-1] - self.predict(row[:-1]))\n",
     "                self.weights[1:] += update * row[:-1]\n",
@@ -314,11 +324,21 @@
     "    def errors(self):\n",
     "        error_count = 0\n",
     "        for row in self.data:\n",
+    "            # print(\"data: \", row[:-1], \"actual: \", row[-1], \"predict: \", self.predict(row[:-1]), \"weights: \", self.weights)\n",
     "            if (self.predict(row[:-1]) != row[-1]):\n",
     "                error_count += 1\n",
     "        print(\"Accuracy: \", 1.0-(error_count/len(self.data)))\n",
     "        print(\"Weights: \", self.weights[1:])\n",
-    "        print(\"Bias weight:\", self.weights[0])"
+    "        print(\"Bias weight:\", self.weights[0])\n",
+    "        \n",
+    "df['diabetes']=df['diabetes'].map({0:-1,1:1})\n",
+    "\n",
+    "X=df.drop('diabetes',axis=1).values\n",
+    "y=df['diabetes'].values\n",
+    "data=np.column_stack((X,y))\n",
+    "perceptron=MyPerceptron(data,iters=5,learning_rate=0.01)\n",
+    "perceptron.fit()\n",
+    "perceptron.errors()"
    ]
   },
   {
@@ -333,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7986537a-e054-4286-91a4-9ba639e3c53d",
    "metadata": {},
    "outputs": [
@@ -342,7 +362,11 @@
      "output_type": "stream",
      "text": [
       "Training features shape: (70000, 8)\n",
-      "Testing labels shape: (30000,)\n"
+      "Training labels shape: (70000,)\n",
+      "(9,)\n",
+      "Accuracy:  0.91968\n",
+      "Weights:  [-17.1      3.6512  89.9     56.66    -7.24   -17.4256   2.454    1.84  ]\n",
+      "Bias weight: -201.32000000002918\n"
      ]
     }
    ],
@@ -352,9 +376,16 @@
     "\n",
     "X=df.drop('diabetes',axis=1).values\n",
     "y=df['diabetes'].values\n",
+    "#Creating that 70/30 test/train split\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
     "print(\"Training features shape:\", x_train.shape)\n",
-    "print(\"Testing labels shape:\", y_test.shape)"
+    "print(\"Training labels shape:\", y_train.shape)\n",
+    "\n",
+    "#Create to labels can call perceptron\n",
+    "train_data =np.column_stack((x_train,y_train))\n",
+    "perceptron=MyPerceptron(data,iters=5,learning_rate=0.01)\n",
+    "perceptron.fit()\n",
+    "perceptron.errors()"
    ]
   },
   {
@@ -367,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "3f6dd4c5-7bc1-4e9b-83e4-0417543b52d3",
    "metadata": {},
    "outputs": [
@@ -376,14 +407,22 @@
      "output_type": "stream",
      "text": [
       "Testing features shape: (30000, 8)\n",
-      "Testing labels shape: (30000,)\n"
+      "Testing labels shape: (30000,)\n",
+      "Test set: 0.920367\n"
      ]
     }
    ],
    "source": [
     "# put your code here\n",
     "print(\"Testing features shape:\", x_test.shape)\n",
-    "print(\"Testing labels shape:\", y_test.shape)"
+    "print(\"Testing labels shape:\", y_test.shape)\n",
+    "\n",
+    "#Helps predict on each test sample\n",
+    "pred=np.array([perceptron.predict(i) for i in x_test])\n",
+    "\n",
+    "test=np.mean(pred == y_test)\n",
+    "print(f\"Test set: {test:3f}\")\n",
+    "#Testing Perceptron code ChatGPT (OpenAI), April 2025"
    ]
   },
   {
@@ -396,13 +435,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "3498a824-d111-451e-9119-6f85964bca45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9,)\n",
+      "Accuracy:  0.93881\n",
+      "Weights:  [  4.16     4.1312 130.88   127.7      0.32     2.8806 149.756    3.82  ]\n",
+      "Bias weight: -1954.3799999985126\n",
+      "Test set: 0.920367\n"
+     ]
+    }
+   ],
    "source": [
     "# put your code here\n",
-    "\n"
+    "new_test= MyPerceptron(data,iters=70,learning_rate=0.0005)\n",
+    "perceptron.fit()\n",
+    "perceptron.errors()\n",
+    "test=np.mean(pred == y_test)\n",
+    "print(f\"Test set: {test:3f}\")"
    ]
   },
   {
