--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "c8dde6c3-799e-480b-ac67-a8e0d2716b7a",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 3721k  100 3721k    0     0  8492k      0 --:--:-- --:--:-- --:--:-- 8514k\n"
+      "100 3721k  100 3721k    0     0  4748k      0 --:--:-- --:--:-- --:--:-- 4752k\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "6d5c10ea-c48d-455f-bd47-fa0324676839",
    "metadata": {},
    "outputs": [
@@ -162,6 +162,7 @@
     "import pandas as pd\n",
     "\n",
     "df=pd.read_csv(\"diabetes_prediction_dataset.csv\")\n",
+    "\n",
     "print(df.head())\n",
     "print(df.iloc[:, 0]) "
    ]
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "4af4a995-58a7-4478-9e3e-b805ab21779f",
    "metadata": {},
    "outputs": [
@@ -235,8 +236,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3345004/2075439444.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['gender']=df['gender'].replace({'Female':0,'Male':1, 'Other':2})\n"
+      "/tmp/ipykernel_1745163/2075439444.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['gender']=df['gender'].replace({'Female':0,'Male':1, 'Other':2})\n",
+      "/tmp/ipykernel_1745163/2075439444.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n"
      ]
     }
    ],
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "22f7672c-5fc3-4c4f-8d06-ec88508c81e9",
    "metadata": {},
    "outputs": [
@@ -353,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "7986537a-e054-4286-91a4-9ba639e3c53d",
    "metadata": {},
    "outputs": [
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "3f6dd4c5-7bc1-4e9b-83e4-0417543b52d3",
    "metadata": {},
    "outputs": [
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "3498a824-d111-451e-9119-6f85964bca45",
    "metadata": {},
    "outputs": [
@@ -444,9 +447,9 @@
      "output_type": "stream",
      "text": [
       "(9,)\n",
-      "Accuracy:  0.93881\n",
-      "Weights:  [  4.16     4.1312 130.88   127.7      0.32     2.8806 149.756    3.82  ]\n",
-      "Bias weight: -1954.3799999985126\n",
+      "Accuracy:  0.92815\n",
+      "Weights:  [-22.54    1.488 136.48   93.32   -5.28  -11.575  18.66    1.86 ]\n",
+      "Bias weight: -380.85999999994357\n",
       "Test set: 0.920367\n"
      ]
     }
@@ -482,14 +485,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "2f57127a-9d83-4408-a18d-8adfb800eb2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 29048  100 29048    0     0   170k      0 --:--:-- --:--:-- --:--:--  170k\n"
+     ]
+    }
+   ],
    "source": [
     "# Download and load the dataset. Convert non-numerical labels to numerics.\n",
     "# put your code here\n",
-    "\n"
+    "!curl -O https://raw.githubusercontent.com/huichiayu/cmse202-s25-supllemental_data/refs/heads/main/HW04/Telecust1.csv"
    ]
   },
   {
@@ -512,12 +525,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f7996b89-84fb-4272-9c30-c5293a97455b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put your modified perceptron class here\n"
+    "# put your modified perceptron class here\n",
+    "class MyPerceptron():\n",
+    "    def __init__ (self, labeled_data, iters, learning_rate):       \n",
+    "        self.data = np.array(labeled_data)\n",
+    "        self.weights = np.full((self.data.shape[1]), 1.0) # note that this is just an easy way to get \"number of features + 1\" and set them to 1.0\n",
+    "        self.iters = iters\n",
+    "        self.l_r = learning_rate\n",
+    "        print(self.weights.shape)\n",
+    "\n",
+    "       \n",
+    "    def predict(self, feature_set):\n",
+    "        # print(\"Features: \",feature_set, \" weights: \", self.weights[1:])\n",
+    "        res = np.dot(feature_set, self.weights[1:])\n",
+    "        res += self.weights[0]\n",
+    "        return (1 if res > 0 else -1)\n",
+    "\n",
+    "    def score(self,feature_set):\n",
+    "        return np.dot(feature_set,self.weights[1:]) + self.weights[0]\n",
+    "\n",
+    "    def fit(self):\n",
+    "        for _ in range(self.iters):\n",
+    "            for row in self.data:\n",
+    "                update = self.l_r * (row[-1] - self.predict(row[:-1]))\n",
+    "                self.weights[1:] += update * row[:-1]\n",
+    "                self.weights[0] += update\n",
+    " \n",
+    "\n",
+    "    def errors(self):\n",
+    "        error_count = 0\n",
+    "        for row in self.data:\n",
+    "            # print(\"data: \", row[:-1], \"actual: \", row[-1], \"predict: \", self.predict(row[:-1]), \"weights: \", self.weights)\n",
+    "            if (self.predict(row[:-1]) != row[-1]):\n",
+    "                error_count += 1\n",
+    "        print(\"Accuracy: \", 1.0-(error_count/len(self.data)))\n",
+    "        print(\"Weights: \", self.weights[1:])\n",
+    "        print(\"Bias weight:\", self.weights[0])"
    ]
   },
   {
@@ -532,12 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "e59a1422-8984-49b8-889e-e34c6172e8f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "train_x, test_x, train_y, test_y = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "\n",
+    "\n",
+    "classes = np.unique(train_y)\n",
+    "sets = {}\n",
+    "for cls in classes:\n",
+    "    y_train_c = np.where(train_y == cls, +1, -1)\n",
+    "    y_test_c  = np.where(test_y  == cls, +1, -1)\n",
+    "    sets[cls] = (y_train_c, y_test_c)"
    ]
   },
   {
@@ -551,12 +608,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "be107995-7f86-48d8-b24a-d3f3ed8b9e62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9,)\n",
+      "Class -1 training accuracy: 0.935\n",
+      "(9,)\n",
+      "Class 1 training accuracy: 0.924\n"
+     ]
+    }
+   ],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "\n",
+    "perceptrons = {}\n",
+    "accuracies = {}\n",
+    "#ChatGPT was used here\n",
+    "for cls in sets:                   \n",
+    "    y, _    = sets[cls]          \n",
+    "    train_data = np.column_stack((train_x, y))\n",
+    "    \n",
+    "    p = MyPerceptron(train_data, iters=50, learning_rate=0.01)\n",
+    "    p.fit()\n",
+    "    perceptrons[cls] = p\n",
+    "    \n",
+    "    # compute training accuracy with an inner loop over examples\n",
+    "    #ChatGPT was used here..\n",
+    "    errors = 0\n",
+    "    for x_i, true_label in zip(train_x, y):\n",
+    "        if p.predict(x_i) != true_label:\n",
+    "            errors += 1\n",
+    "    acc = 1 - errors/len(y)\n",
+    "    accuracies[cls] = acc\n",
+    "    \n",
+    "    print(f\"Class {cls} training accuracy: {acc:.3f}\")\n",
+    "\n",
+    "    \n",
+    "#Testing/Training Perceptron code for 5 classes ChatGPT (OpenAI), April 2025"
    ]
   },
   {
@@ -571,12 +664,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "1e549131-9459-437b-b627-bc99e0fa93cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.915\n"
+     ]
+    }
+   ],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "per=[]\n",
+    "\n",
+    "for i in test_x:\n",
+    "    scores ={cls:perceptrons[cls].score(x_i) for cls in perceptrons}\n",
+    "    predc=max(scores,key=scores.get)\n",
+    "    per.append(predc)\n",
+    "\n",
+    "per = np.array(per)\n",
+    "testa=np.mean(np.array(per) == test_y)\n",
+    "print(f\"Test Accuracy: {testa:.3f}\")"
    ]
   },
   {
@@ -592,7 +703,7 @@
    "id": "c598a593-aac1-48b7-b634-f6c046f256f3",
    "metadata": {},
    "source": [
-    "<font size=6 color=\"#009600\">&#9998;</font> Put your answer here"
+    "<font size=6 color=\"#009600\">&#9998;</font> Based on the training and the testing done you get a accuracy of 0.915 meaning that about 90% of the testing was fairly accurate."
    ]
   },
   {
