push to use vscode issues with server

--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "6d5c10ea-c48d-455f-bd47-fa0324676839",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "4af4a995-58a7-4478-9e3e-b805ab21779f",
    "metadata": {},
    "outputs": [
@@ -215,11 +215,11 @@
       "4       1  76.0             1              1                2  20.14   \n",
       "\n",
       "   HbA1c_level  blood_glucose_level  diabetes  \n",
-      "0          6.6                  140         0  \n",
-      "1          6.6                   80         0  \n",
-      "2          5.7                  158         0  \n",
-      "3          5.0                  155         0  \n",
-      "4          4.8                  155         0  \n",
+      "0          6.6                  140        -1  \n",
+      "1          6.6                   80        -1  \n",
+      "2          5.7                  158        -1  \n",
+      "3          5.0                  155        -1  \n",
+      "4          4.8                  155        -1  \n",
       "gender                   int64\n",
       "age                    float64\n",
       "hypertension             int64\n",
@@ -230,16 +230,6 @@
       "blood_glucose_level      int64\n",
       "diabetes                 int64\n",
       "dtype: object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1745163/2075439444.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['gender']=df['gender'].replace({'Female':0,'Male':1, 'Other':2})\n",
-      "/tmp/ipykernel_1745163/2075439444.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['smoking_history'] = df['smoking_history'].replace({'never': 0,'No Info':1,'current':2,'former':3,'ever':4,'not current':5})\n"
      ]
     }
    ],
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "id": "22f7672c-5fc3-4c4f-8d06-ec88508c81e9",
    "metadata": {},
    "outputs": [
@@ -291,9 +281,9 @@
      "output_type": "stream",
      "text": [
       "(9,)\n",
-      "Accuracy:  0.91968\n",
-      "Weights:  [-17.1      3.6512  89.9     56.66    -7.24   -17.4256   2.454    1.84  ]\n",
-      "Bias weight: -201.32000000002918\n"
+      "Accuracy:  0.0\n",
+      "Weights:  [nan nan nan nan nan nan nan nan]\n",
+      "Bias weight: nan\n"
      ]
     }
    ],
@@ -356,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "7986537a-e054-4286-91a4-9ba639e3c53d",
    "metadata": {},
    "outputs": [
@@ -367,9 +357,9 @@
       "Training features shape: (70000, 8)\n",
       "Training labels shape: (70000,)\n",
       "(9,)\n",
-      "Accuracy:  0.91968\n",
-      "Weights:  [-17.1      3.6512  89.9     56.66    -7.24   -17.4256   2.454    1.84  ]\n",
-      "Bias weight: -201.32000000002918\n"
+      "Accuracy:  0.0\n",
+      "Weights:  [nan nan nan nan nan nan nan nan]\n",
+      "Bias weight: nan\n"
      ]
     }
    ],
@@ -379,7 +369,7 @@
     "\n",
     "X=df.drop('diabetes',axis=1).values\n",
     "y=df['diabetes'].values\n",
-    "#Creating that 70/30 test/train split\n",
+    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
     "print(\"Training features shape:\", x_train.shape)\n",
     "print(\"Training labels shape:\", y_train.shape)\n",
@@ -401,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "3f6dd4c5-7bc1-4e9b-83e4-0417543b52d3",
    "metadata": {},
    "outputs": [
@@ -411,7 +401,7 @@
      "text": [
       "Testing features shape: (30000, 8)\n",
       "Testing labels shape: (30000,)\n",
-      "Test set: 0.920367\n"
+      "Test set: 0.000000\n"
      ]
     }
    ],
@@ -438,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "3498a824-d111-451e-9119-6f85964bca45",
    "metadata": {},
    "outputs": [
@@ -447,10 +437,10 @@
      "output_type": "stream",
      "text": [
       "(9,)\n",
-      "Accuracy:  0.92815\n",
-      "Weights:  [-22.54    1.488 136.48   93.32   -5.28  -11.575  18.66    1.86 ]\n",
-      "Bias weight: -380.85999999994357\n",
-      "Test set: 0.920367\n"
+      "Accuracy:  0.0\n",
+      "Weights:  [nan nan nan nan nan nan nan nan]\n",
+      "Bias weight: nan\n",
+      "Test set: 0.000000\n"
      ]
     }
    ],
@@ -485,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "2f57127a-9d83-4408-a18d-8adfb800eb2f",
    "metadata": {},
    "outputs": [
@@ -495,7 +485,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 29048  100 29048    0     0   170k      0 --:--:-- --:--:-- --:--:--  170k\n"
+      "100 29048  100 29048    0     0   109k      0 --:--:-- --:--:-- --:--:--  109k\n"
      ]
     }
    ],
@@ -525,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "f7996b89-84fb-4272-9c30-c5293a97455b",
    "metadata": {},
    "outputs": [],
@@ -580,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "id": "e59a1422-8984-49b8-889e-e34c6172e8f6",
    "metadata": {},
    "outputs": [],
@@ -608,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "id": "be107995-7f86-48d8-b24a-d3f3ed8b9e62",
    "metadata": {},
    "outputs": [
@@ -617,9 +607,9 @@
      "output_type": "stream",
      "text": [
       "(9,)\n",
-      "Class -1 training accuracy: 0.935\n",
+      "Class 1.0 training accuracy: 0.924\n",
       "(9,)\n",
-      "Class 1 training accuracy: 0.924\n"
+      "Class nan training accuracy: 1.000\n"
      ]
     }
    ],
@@ -664,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "1e549131-9459-437b-b627-bc99e0fa93cf",
    "metadata": {},
    "outputs": [
@@ -672,7 +662,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.915\n"
+      "Test Accuracy: 0.000\n"
      ]
     }
    ],
@@ -736,13 +726,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "id": "59ddfabd-08e6-4af4-b6b6-29b2b217f8f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape: (100000, 8)\n",
+      "y.shape: (70000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X.shape:\", X.shape)\n",
+    "print(\"y.shape:\", y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "eb83c8b3-cc1b-4fa6-a2f7-f627339586d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'iloc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msvm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SVC\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GridSearchCV\n\u001b[0;32m----> 5\u001b[0m X_sub \u001b[38;5;241m=\u001b[39m \u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m[:\u001b[38;5;241m200\u001b[39m]    \n\u001b[1;32m      6\u001b[0m y_sub \u001b[38;5;241m=\u001b[39m y\u001b[38;5;241m.\u001b[39miloc[:\u001b[38;5;241m200\u001b[39m]    \n\u001b[1;32m      7\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X_sub, y_sub,test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m,\n\u001b[1;32m      8\u001b[0m random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m,stratify\u001b[38;5;241m=\u001b[39my_sub)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'iloc'"
+     ]
+    }
+   ],
    "source": [
     "# put your code here.\n",
-    "\n"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "X_sub = X[:200]    \n",
+    "y_sub = y[:200]    \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_sub, y_sub,test_size=0.3,\n",
+    "random_state=42,stratify=y_sub)\n",
+    "\n",
+    "param_grid= {\"C\" :[1e-2,1e-1,1e0,1e1],\n",
+    "             'gamma': [1e-4, 1e-3, 1e-2, 1e-1],\n",
+    "             'kernel':  ['linear', 'rbf'] }\n",
+    "\n",
+    "clf = GridSearchCV(\n",
+    "    estimator=SVC(class_weight=\"balanced\"),\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2\n",
+    ")\n",
+    "                 \n",
+    "print(\"Fitting the calssifier\")\n",
+    "clf.fit(X_train,y_train)\n",
+    "print(\"→ Best parameters:\", clf.best_params_)\n",
+    "print(\"→ Best CV score:  \", clf.best_score_)"
    ]
   },
   {
@@ -760,7 +805,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put your code here\n"
+    "# put your code here\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "y_pred=clf.predict(X_testi)\n",
+    "acc=accuracy(y_testt,y_pred)\n",
+    "print(f\"Test Accuracy: {acc:3f}\")\n",
+    "print(classification_report(y_testi, y_pred))\n",
+    "\n",
+    "cm=confusion_matrix(y_testi, y_pred, labels=clf.classes_)\n",
+    "disp=ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=cls.classes_)\n",
+    "disp.plot(cmap=plt.cm.Blues)\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "plt.show()\n"
    ]
   },
   {
